# SortingHat

./: .gitattributes  .gitignore  LICENSE  README.md  SortingHat.spec  build_app.sh  build_exe.bat  example_config.json  pyproject.toml  sortinghat.py  sortinghat_gui.py
tests/: test_gui.py  test_sortinghat.py
tools/: make_icon.py
