[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sortinghat"
version = "1.0.0"
description = "A simple CLI tool for organizing messy folders by file type."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

# No runtime dependencies — uses only the standard library
dependencies = []

[project.scripts]
sortinghat = "sortinghat:main"

[project.urls]
Repository = "https://github.com/jeevanb93/SortingHat"
