[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sortinghat"
version = "1.2.0"
description = "A simple CLI tool for organizing messy folders by file type."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

# No runtime dependencies — uses only the standard library
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
py-modules = ["sortinghat", "sortinghat_gui"]

[project.scripts]
sortinghat = "sortinghat:main"

[project.gui-scripts]
sortinghat-gui = "sortinghat_gui:main"

[project.urls]
Repository = "https://github.com/jeevanb93/SortingHat"

[tool.pytest.ini_options]
testpaths = ["tests"]
